fix bug #61287 (A particular string fails to decompress)